--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,13 @@
 <body>
     <a href="login">
     <button>
-        点我登陆
+        <h1>点我登陆</h1>
+    </button>
+    </a>
+    <br>
+    <a href="login">
+    <button>
+        <h1>点我注册</h1>
     </button>
     </a>
 </body>
