--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,13 @@
     <title>rua</title>
 </head>
 <body>
-    <a href="login">
+    <a href="/login">
     <button>
         <h1>点我登陆</h1>
     </button>
     </a>
     <br>
-    <a href="login">
+    <a href="/login">
     <button>
         <h1>点我注册</h1>
     </button>
