--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,19 @@
     <title>rua</title>
 </head>
 <body>
+    <p>
+    <h1>
+    这里是主页！！！
+    </h1>
+    </p>
+    <br>
     <a href="/login">
     <button>
         <h1>点我登陆</h1>
     </button>
     </a>
     <br>
-    <a href="/login">
+    <a href="/register">
     <button>
         <h1>点我注册</h1>
     </button>
