some small changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
     <title>rua</title>
 </head>
 <body>
+    {% if success_login %}
+    {{ success_login }}
+    {% endif %}
     <p>
     <h1>
     这里是主页！！！
