--- a/templates/register.html
+++ b/templates/register.html
@@ -14,8 +14,22 @@
         <label>
             <input type ='password' name="password" required>
         </label>
+        <br>
         <button type="submit">注册</button>
     </form>
+    <br>
+    {% if error_register_exist %}
+    {{ error_register_exist }}
+    {% endif %}
+    {% if error_pass_style %}
+    {{ error_pass_style }}
+    {% endif %}
+    {% if error_pass_length %}
+    {{ error_pass_length }}
+    {% endif %}
+    {% if error_name_length %}
+    {{ error_name_length }}
+    {% endif %}
 
 </body>
 </html>
