some small changes

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,21 @@
     <title>login</title>
 </head>
 <body>
+    <a href="/">
+        <p>
+            主页
+        </p>
+    </a>
+    <a href="/login">
+        <p>
+            登陆
+        </p>
+    </a>
+    <a href="/register">
+        <p>
+            注册
+        </p>
+    </a>
     {% if success_register %}
     {{ success_register }}
     {% endif %}
