--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,21 @@
     <title>rua</title>
 </head>
 <body>
+    <a href="/">
+        <p>
+            主页
+        </p>
+    </a>
+    <a href="/login">
+        <p>
+            登陆
+        </p>
+    </a>
+    <a href="/register">
+        <p>
+            注册
+        </p>
+    </a>
     {% if success_login %}
     {{ success_login }}
     {% endif %}
