--- a/templates/register.html
+++ b/templates/register.html
@@ -30,8 +30,8 @@
             <input type ='password' name="password" required>
         </label>
         <div>性别:
-		    <label><input type="radio" name="sex" value="男生">男生</label>
-		    <label><input type="radio" name="sex" value="女生">女生</label>
+		    <label><input type="radio" name="sex" value="男生" required>男生</label>
+		    <label><input type="radio" name="sex" value="女生" required>女生</label>
 	    </div>
         <br>
         <button type="submit">注册</button>
